<resources>
    <string name="app_name">BelajarAndroidStudio</string>
    <string name="Panjang">Panjang</string>
    <string name="Tinggi" >Tinggi</string>
    <string name="Lebar" >Lebar</string>
    <string name="masukan_panjang">masukan panjang</string>
    <string name="masukan_lebar">masukan lebar</string>
    <string name="masukan_tinggi">masukan tinggi</string>
    <string name="calculate">Calculate</string>
    <string name="Hasil">Hasil</string>
</resources>